--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
-version: '3.1'
+version: '3.7'
+
 services:
   postgres:
-    image: postgres
-    restart: always
+    image: postgres:latest
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+    networks:
+      - my_network
+
+networks:
+  my_network:
+    driver: bridge
